--- a/application/mobile/view/index/index.html
+++ b/application/mobile/view/index/index.html
@@ -155,8 +155,8 @@
     function countRange(nowPrice,productAbbreviation){
         var range=nowPrice-openPrice[productAbbreviation];
         var range_per=range/openPrice[productAbbreviation]*100;
-        var up_down_val=  "#up_down_val"+productAbbreviation;
-        var up_down_per=  "up_down_per"+productAbbreviation+"]";
+        var up_down_val=  "#up_down_val_"+productAbbreviation;
+        var up_down_per=  "up_down_per_"+productAbbreviation+"]";
         var color;
         if(nowPrice>=openPrice[productAbbreviation]){
             color='red';
