--- a/application/mobile/view/index/index.html
+++ b/application/mobile/view/index/index.html
@@ -157,6 +157,7 @@
         var range_per=range/openPrice[productAbbreviation]*100;
         var up_down_val=  "#up_down_val_"+productAbbreviation;
         var up_down_per=  "#up_down_per_"+productAbbreviation;
+        var name="#"+productAbbreviation;
         var color;
         if(nowPrice>=openPrice[productAbbreviation]){
             color='red';
@@ -165,7 +166,7 @@
         }
         $(up_down_val).text(math_floor(range)).parent().attr("style","color:"+color+";");
         $(up_down_per).text(math_floor(range_per)).parent().attr("style","color:"+color+";");
-        $('#'+k).attr("style","color:"+color+";");
+        $(name).attr("style","color:"+color+";");
     }
     $(function  () {
         var url = baseUrl + "/openPrice";
