--- a/application/admin/view/order/keep_order_list.html
+++ b/application/admin/view/order/keep_order_list.html
@@ -181,7 +181,16 @@
             $('.sum_count').text($('.sum_count').text()-1);
             $(tr).remove();
         }
-        var ws = new WebSocket("ws://47.90.122.200:8080/ws?uid=1");
+
+        var loc = window.location;
+        var baseUrl  = loc.protocol  + '//' + loc.host + '/golang'
+        var uid=1;
+        var wsUrl ='ws:';
+        if(loc.protocol == 'https:')
+            wsUrl = 'wss:'
+        wsUrl += '//' + loc.host + '/golang/ws?uid=' + uid;
+        var ws = new WebSocket(wsUrl)
+        //    var ws = new WebSocket("ws://47.90.122.200:8080/ws?uid=3");
 
         ws.onopen = function()
         {
@@ -191,8 +200,7 @@
 
         ws.onmessage = function (evt)
         {
-//            console.log(evt);
-        console.log(evt.data);
+            //console.log(evt.data);
             var data=JSON.parse(evt.data);
             if(data.status){
                 //用户下单
