--- a/application/agent/view/order/keep_order_list.html
+++ b/application/agent/view/order/keep_order_list.html
@@ -178,7 +178,15 @@
             $('.sum_count').text($('.sum_count').text()-1);
             $(tr).remove();
         }
-        var ws = new WebSocket("ws://47.90.122.200:8080/ws?uid=agent");
+        var loc = window.location;
+        var baseUrl  = loc.protocol  + '//' + loc.host + '/golang'
+        var wsUrl ='ws:';
+        var uid="{$agent}";
+        if(loc.protocol == 'https:')
+            wsUrl = 'wss:'
+        wsUrl += '//' + loc.host + '/golang/ws?uid=agent_'+uid;
+        var ws = new WebSocket(wsUrl)
+        //    var ws = new WebSocket("ws://47.90.122.200:8080/ws?uid=3");
 
         ws.onopen = function()
         {
@@ -188,8 +196,7 @@
 
         ws.onmessage = function (evt)
         {
-//            console.log(evt);
-            console.log(evt.data);
+            //console.log(evt.data);
             var data=JSON.parse(evt.data);
             if(data.status){
                 //用户下单
