修改k线可选的间隔

--- a/application/index/view/trade/index.html
+++ b/application/index/view/trade/index.html
@@ -596,9 +596,9 @@
                                     <ul style="padding: 0 10px;">
                                         <li gap="1minute">1分钟</li>
                                         <li gap="5minute">5分钟</li>
-                                        <li gap="10minute">10分钟</li>
-                                        <li gap="1hour">1小时</li>
-                                        <li gap="4hour">4小时</li>
+                                        <li gap="15minute">15分钟</li>
+                                        <li gap="30minute">30分钟</li>
+                                        <li gap="60minute">1小时</li>
                                         <li class="my_active default_active" gap="1day" count="30">1天</li>
                                     </ul>
                                 </div>
