--- a/application/admin/view/admin/adv_add.html
+++ b/application/admin/view/admin/adv_add.html
@@ -67,6 +67,7 @@
                 <select id="type" name="type" class="valid" required="" lay-verify="type">
                     <option value="1">首页</option>
                     <option  value="2">申购币</option>
+                    <option  value="3">app首页</option>
                 </select>
             </div>
         </div>
