--- a/application/admin/view/admin/adv_edit.html
+++ b/application/admin/view/admin/adv_edit.html
@@ -68,6 +68,7 @@
                 <select id="type" name="type" class="valid" required="" lay-verify="type">
                     <option value="1" {if condition="$info['type'] eq 1"}selected="selected"{/if}>首页</option>
                     <option  value="2" {if condition="$info['type'] eq 2"}selected="selected"{/if}>申购币</option>
+                    <option  value="3" {if condition="$info['type'] eq 3"}selected="selected"{/if}>app首页</option>
                 </select>
             </div>
         </div>
