--- a/application/admin/view/admin/adv_list.html
+++ b/application/admin/view/admin/adv_list.html
@@ -49,6 +49,7 @@
                     <option value="">广告位置</option>
                         <option {if condition="input('get.type') eq 1"} selected="selected"{/if} value="1">首页</option>
                         <option {if condition="input('get.type') eq 2"} selected="selected"{/if} value="2">申购币</option>
+                        <option {if condition="input('get.type') eq 3"} selected="selected"{/if} value="3">app首页</option>
                 </select>
             </div>
 
