--- a/application/mobile/view/user/index.html
+++ b/application/mobile/view/user/index.html
@@ -205,6 +205,10 @@
         <div class="weui-tabbar__icon foot-menu-home"></div>
         <p class="weui-tabbar__label">首页</p>
     </a>
+    <a href="/mobile/Index/price" class="weui-tabbar__item">
+        <div class="weui-tabbar__icon foot-menu-list"></div>
+        <p class="weui-tabbar__label">行情</p>
+    </a>
     <a href="/mobile/Trade/index" class="weui-tabbar__item">
         <div class="weui-tabbar__icon foot-menu-list"></div>
         <p class="weui-tabbar__label">交易中心</p>
