--- a/application/mobile/view/index/index.html
+++ b/application/mobile/view/index/index.html
@@ -48,10 +48,12 @@
         <div class="weui-panel__hd" style="color: white">新闻资讯</div>
         <div class="weui-panel__bd">
             {volist name="news_list" id="val"}
-            <div class="weui-media-box weui-media-box_text">
-                <h4 class="weui-media-box__title" style="color: white">{$val.title}</h4>
-                <p class="weui-media-box__desc" style="color: white;overflow: hidden;white-space: nowrap;text-overflow: ellipsis;">{$val.des}</p>
-            </div>
+                <div class="weui-media-box weui-media-box_text">
+                    <a href="/mobile/Notice/news_info?id={$val.id}">
+                        <h4 class="weui-media-box__title" style="color: white">{$val.title}</h4>
+                    <!--<p class="weui-media-box__desc" style="color: white;overflow: hidden;white-space: nowrap;text-overflow: ellipsis;">{$val.des}</p>-->
+                    </a>
+                </div>
             {/volist}
             <div class="weui-panel__ft">
                 <a href="/mobile/Notice/news_list" class="weui-cell weui-cell_access weui-cell_link">
