--- a/application/agent/view/login/login.html
+++ b/application/agent/view/login/login.html
@@ -22,7 +22,7 @@
         <div id="darkbannerwrap"></div>
         
         <form method="post" class="layui-form" >
-            <input name="agent_name" placeholder="账号"  type="number" lay-verify="normal" class="layui-input" >
+            <input name="agent_name" placeholder="账号"  type="text" lay-verify="normal" class="layui-input" >
             <hr class="hr15">
             <input name="password" lay-verify="password" placeholder="密码"  type="password" class="layui-input">
             <hr class="hr15">
