--- a/application/mobile/view/index/index.html
+++ b/application/mobile/view/index/index.html
@@ -75,10 +75,10 @@
         <p class="weui-tabbar__label">首页</p>
     </a>
     <a href="/mobile/Index/price" class="weui-tabbar__item">
-        <div class="weui-tabbar__icon foot-menu-list"></div>
+        <div class="weui-tabbar__icon foot-menu-price"></div>
         <p class="weui-tabbar__label">行情</p>
     </a>
-    <a href="/mobile/Trade/index" class="weui-tabbar__item">
+    <a href="/mobile/Trade/index?id=3" class="weui-tabbar__item">
         <div class="weui-tabbar__icon foot-menu-list"></div>
         <p class="weui-tabbar__label">交易中心</p>
     </a>
