--- a/application/mobile/view/index/price.html
+++ b/application/mobile/view/index/price.html
@@ -175,7 +175,7 @@
     }
     $(function  () {
         var url = baseUrl + "/openPrice";
-//        url = 'https://aioq.cn/golang/openPrice';
+        url = 'https://aioq.cn/golang/openPrice';
         //获取产品开盘价
         $.ajax({
             type: 'get',
@@ -194,7 +194,7 @@
         if(loc.protocol == 'https:')
             wsUrl = 'wss:'
         wsUrl += '//' + loc.host + '/golang/ws?uid=' + 3;
-//        wsUrl= 'wss://aioq.cn/golang/ws?uid=4';
+        wsUrl= 'wss://aioq.cn/golang/ws?uid=4';
         var ws = new WebSocket(wsUrl);
         ws.onopen = function()
         {
